# Zoomies

./: Cargo.toml  LICENSE  README.md  raidFile.txt  trigger_list.txt
.github/workflows/: rust.yml
src/: main.rs  notify_running.rs  splash.txt  waiting_ping.rs  webhook.rs
