[package]
name = "zoomies"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.34"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
inquire = "0.6.2"
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
spinoff = "0.8.0"
ureq = { version = "2.9.1", features = ["json"] }
win-beep = "1.0.3"
